Fixed some object leaks in toString() in unit converter brought out by the listcursor implemented case insensitive sort for cursor results